// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sort renders alpha ascending properly 1`] = `
<div
  class="form-group"
>
  <div
    class="dropdown btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-default"
      id="sortTypeMenu"
      role="button"
      type="button"
    >
      Name 
      <span
        class="caret"
      />
    </button>
    <ul
      aria-labelledby="sortTypeMenu"
      class="dropdown-menu"
      role="menu"
    >
      <li
        class="selected"
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Name
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Address
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Birth Month
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Car
        </a>
      </li>
    </ul>
  </div>
  <button
    class="btn btn-link"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-sort-alpha-asc sort-direction"
    />
  </button>
</div>
`;

exports[`Sort renders alpha descending properly 1`] = `
<div
  class="form-group"
>
  <div
    class="dropdown btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-default"
      id="sortTypeMenu"
      role="button"
      type="button"
    >
      Name 
      <span
        class="caret"
      />
    </button>
    <ul
      aria-labelledby="sortTypeMenu"
      class="dropdown-menu"
      role="menu"
    >
      <li
        class="selected"
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Name
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Address
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Birth Month
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Car
        </a>
      </li>
    </ul>
  </div>
  <button
    class="btn btn-link"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-sort-alpha-desc sort-direction"
    />
  </button>
</div>
`;

exports[`Sort renders numeric ascending properly 1`] = `
<div
  class="form-group"
>
  <div
    class="dropdown btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-default"
      id="sortTypeMenu"
      role="button"
      type="button"
    >
      Name 
      <span
        class="caret"
      />
    </button>
    <ul
      aria-labelledby="sortTypeMenu"
      class="dropdown-menu"
      role="menu"
    >
      <li
        class="selected"
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Name
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Address
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Birth Month
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Car
        </a>
      </li>
    </ul>
  </div>
  <button
    class="btn btn-link"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-sort-numeric-asc sort-direction"
    />
  </button>
</div>
`;

exports[`Sort renders numeric descending properly 1`] = `
<div
  class="form-group"
>
  <div
    class="dropdown btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-default"
      id="sortTypeMenu"
      role="button"
      type="button"
    >
      Name 
      <span
        class="caret"
      />
    </button>
    <ul
      aria-labelledby="sortTypeMenu"
      class="dropdown-menu"
      role="menu"
    >
      <li
        class="selected"
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Name
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Address
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Birth Month
        </a>
      </li>
      <li
        class=""
        role="presentation"
      >
        <a
          href="#"
          role="menuitem"
          tabindex="-1"
        >
          Car
        </a>
      </li>
    </ul>
  </div>
  <button
    class="btn btn-link"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-sort-numeric-desc sort-direction"
    />
  </button>
</div>
`;
